--- a/01-server/package.json
+++ b/01-server/package.json
@@ -15,6 +15,8 @@
   },
   "devDependencies": {
     "@types/cors": "^2.8.6",
-    "@types/express": "^4.17.6"
+    "@types/express": "^4.17.6",
+    "@types/socket.io": "^2.1.8",
+    "socket.io": "^2.3.0"
   }
 }
